--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,9 @@ body {
   width: 80px;
   cursor: pointer;
   display: flex;
-    justify-content: center;
+  justify-content: center;
   align-items: center;
+  font-size: 15px;
 }
 
 #btn {
@@ -84,4 +85,20 @@ body {
 
 .hidden {
   display: none;
+}
+
+#reset, #reset:hover {
+  width: 80px;
+  margin: auto;
+  font-size: 20px;
+  border: 2px solid black;
+  text-align: center;
+  font-size: 15px;
+  cursor: pointer;
+  margin-top: 50px;
+}
+
+#reset:hover {
+  background: black;
+  color: #fff;  
 }
